refactor: 使用 Embabel @Agent/@Condition 注解，去除手动 Condition 调用
- LibraryAgent 加上 @Agent 注解
- 条件判断改为 @Condition 标记的方法（不通过外部 Condition 类调用）
- OODA 各步骤用 @Condition 方法做守卫检查
- 当 AgentPlatformAutoConfiguration 启用后，Embabel GOAP 可自动编排
- CLAUDE.md 加入 Embabel 注解规范说明